Landing fix for regression bug 402422. XPathResult crashes when holding nodeset and accessing stringValue/numberValue/booleanValue. Patch by peterv@propagandism.org, r+sr=jst@mozilla.org. Landing this one w/o direct approval to get it in for the upcoming nightlies.