content/xslt/src/xpath/nsXPathResult.h
@@ -99,20 +99,32 @@ public:
     nsresult Clone(nsIXPathResult **aResult);
     void RemoveObserver();
 private:
+    static PRBool isSnapshot(PRUint16 aResultType)
+    {
+        return aResultType == UNORDERED_NODE_SNAPSHOT_TYPE ||
+               aResultType == ORDERED_NODE_SNAPSHOT_TYPE;
+    }
+    static PRBool isIterator(PRUint16 aResultType)
+    {
+        return aResultType == UNORDERED_NODE_ITERATOR_TYPE ||
+               aResultType == ORDERED_NODE_ITERATOR_TYPE;
+    }
+    static PRBool isNode(PRUint16 aResultType)
+    {
+        return aResultType == FIRST_ORDERED_NODE_TYPE ||
+               aResultType == ANY_UNORDERED_NODE_TYPE;
+    }
     PRBool isSnapshot() const
     {
-        return mResultType == UNORDERED_NODE_SNAPSHOT_TYPE ||
-               mResultType == ORDERED_NODE_SNAPSHOT_TYPE;
+        return isSnapshot(mResultType);
     }
     PRBool isIterator() const
     {
-        return mResultType == UNORDERED_NODE_ITERATOR_TYPE ||
-               mResultType == ORDERED_NODE_ITERATOR_TYPE;
+        return isIterator(mResultType);
     }
     PRBool isNode() const
     {
-        return mResultType == FIRST_ORDERED_NODE_TYPE ||
-               mResultType == ANY_UNORDERED_NODE_TYPE;
+        return isNode(mResultType);
     }
 
     void Invalidate(const nsIContent* aChangeRoot);
@@ -124,6 +136,9 @@ private:
     PRUint16 mResultType;
     nsWeakPtr mContextNode;
     PRPackedBool mInvalidIteratorState;
+    PRBool mBooleanResult;
+    double mNumberResult;
+    nsString mStringResult;
 };
 
 #endif
